samples/fail/missing_semicolon.c
int main() {
    print_int(42)
    return 0;
}
